--- a/Documentation/Localization.de_DE/Settings.yml
+++ b/Documentation/Localization.de_DE/Settings.yml
@@ -8,19 +8,19 @@
 
 ---
 conf.py:
-  copyright: 2012-2015
-  project: Extension Name (Deutsch)
-  version: x.y
-  release: x.y.z
+  copyright: 2018
+  project: Newsletter-Abonnenten-Management
+  version: 1.0.0
+  release: 1.0.0
   intersphinx_mapping:
     t3tsref:
     - https://docs.typo3.org/typo3cms/TyposcriptReference/
     - null
   latex_documents:
   - - Index
-    - <extension_key>.tex
-    - Extension Name (Français)
-    - Your Name
+    - fp_newsletter.tex
+    - Newsletter-Abonnenten-Management
+    - Kurt Gusbeth
     - manual
   latex_elements:
     papersize: a4paper
