--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "license": ["GPL-2.0-or-later"],
   "require": {
     "typo3/cms-core": "^8.7.0|| ^9.5.0",
-    "tt_address":"3.0.0"
+    "friendsoftypo3/tt-address": "4.1.0"
   },
   "autoload": {
     "psr-4": {
