--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 	"support" : {
 		"email" : "info@quizpalme.de"
 	},
-	"license" : "GPL-3.0+",
+	"license" : "GPL-3.0-or-later",
 	"keywords" : [
 		"newsletter subscription dsgvo gdpr"
 	]
