--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -13,13 +13,13 @@
 # ...   (required) title (displayed in left sidebar (desktop) or top panel (mobile)
 # .................................................................................
 
-project     = Newsletter subscriber managment
+project     = Newsletter subscriber managment (for tt_address and direct_mail)
 
 # .................................................................................
 # ...   (recommended) version, displayed next to title (desktop) and in <meta name="book-version"
 # .................................................................................
 
-release     = 0.17.0
+release     = latest
 
 # .................................................................................
 # ...  (recommended) displayed in footer
