extension-key in composer.json

--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,10 @@
 		"newsletter subscription",
 		"dsgvo",
 		"gdpr"
-	]
+	],
+	"extra": {
+		"typo3/cms": {
+			"extension-key": "fp_newsletter"
+		}
+	}
 }
