--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"authors" : [{
 			"name" : "Kurt Gusbeth",
 			"role" : "Developer",
-			"homepage": "http://www.quizpalme.de"
+			"homepage": "https://www.quizpalme.de"
 		}
 	],
 	"require" : {
