--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		}
 	],
 	"require" : {
-		"typo3/cms-core" : "~10.4.6 || ~11.5.0"
+		"typo3/cms-core" : "~10.4.6 || ~11.5.0",
+		"friendsoftypo3/tt-address": "^5.3"
 	},
 	"autoload" : {
 		"psr-4" : {
