--- a/Documentation/Localization.de_DE/Settings.cfg
+++ b/Documentation/Localization.de_DE/Settings.cfg
@@ -19,7 +19,7 @@ project     = Newsletter-Abonnenten-Management
 # ...   (recommended) version, displayed next to title (desktop) and in <meta name="book-version"
 # .................................................................................
 
-release     = 0.17.0
+release     = latest
 
 # .................................................................................
 # ...  (recommended) displayed in footer
