--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
 	"authors" : [{
 			"name" : "Kurt Gusbeth",
 			"role" : "Developer",
-			"homepage": "https://www.quizpalme.de"
+			"homepage": "https://www.fixpunkt.com"
 		}
 	],
 	"require" : {
-		"typo3/cms-core" : "~10.4.6 || ~11.5.3"
+		"typo3/cms-core" : "~12.4.0"
 	},
 	"autoload" : {
 		"psr-4" : {
