--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -13,7 +13,7 @@
 # ...   (required) title (displayed in left sidebar (desktop) or top panel (mobile)
 # .................................................................................
 
-project     = Newsletter subscriber management (for tt_address and direct_mail or fe_users and luxletter)
+project     = Newsletter subscriber management (for tt_address and mail or fe_users and luxletter)
 
 # .................................................................................
 # ...   (recommended) version, displayed next to title (desktop) and in <meta name="book-version"
