--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		}
 	],
 	"require" : {
-		"typo3/cms-core" : "~11.5.0 || ~12.4.0"
+		"typo3/cms-core" : "~12.4.0"
 	},
 	"autoload" : {
 		"psr-4" : {
